-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
None
-
Arch/KDE
-
-
5dd5c394c (dev), 1cdd98f50 (6.9), 147e7f312 (6.8)
as title, set plotAreaBackgroundVisible to false /true, no any change.
and set plotAreaBackgroundColor to "transparent", got expected result.
| For Gerrit Dashboard: QTBUG-132596 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 616611,4 | 2D: Fix plotAreaBackgroundVisibility | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 616799,2 | 2D: Fix plotAreaBackgroundVisibility | 6.9 | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 616922,2 | 2D: Fix plotAreaBackgroundVisibility | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |