2D: Fix plotAreaBackgroundVisibility

plotAreaBackgroundVisibility was completely ignored by AxisRenderer.
This patch fixes it.

Fixes: QTBUG-132596
Pick-to: 6.8
Change-Id: I61ced5c05941f99d3516e478549e4b457c67ae83
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
(cherry picked from commit 5dd5c394cb6aed52623a6242fc570ec867867b92)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>